[metadata]
name = Radiko
version = attr: Radiko.__version__
url = https://github.com/kokarare1212/Radiko.py
author = kokarare1212
author_email = kokarare1212@gmail.com
license = Apache License 2.0
license_file = LICENSE.txt
description = Radiko: Python製の非公式Radikoライブラリ
long_description = file: README.md
packages = Radiko
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  License :: OSI Approved :: Apache Software License
  Natural Language :: Japanese
  Programming Language :: Python :: 3.9
  Topic :: Multimedia :: Sound/Audio :: Players

[options]
install_requires =
  defusedxml
  requests
packages = Radiko
[aliases]
dists = sdist bdist_wheel